crates/vespertide-exporter/src/snapshots/vespertide_exporter__orm__tests__render_entity_snapshots@seaorm.snap
---
source: crates/vespertide-exporter/src/orm.rs
expression: result.unwrap()
---
use sea_orm::entity::prelude::*;
use serde::{Deserialize, Serialize};

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel, Serialize, Deserialize)]
#[serde(rename_all = "camelCase")]
#[sea_orm(table_name = "test")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
}

impl ActiveModelBehavior for ActiveModel {}
