crates/vespertide-exporter/src/snapshots/vespertide_exporter__orm__tests__render_entity_snapshots@sqlalchemy.snap
---
source: crates/vespertide-exporter/src/orm.rs
expression: result.unwrap()
---
from __future__ import annotations


from sqlalchemy import Integer
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column


class Test(DeclarativeBase):
    __tablename__ = "test"

    id: Mapped[int] = mapped_column(Integer, primary_key=True)
