crates/vespertide-exporter/src/snapshots/vespertide_exporter__orm__tests__render_entity_with_schema_snapshots@seaorm.snap
---
source: crates/vespertide-exporter/src/orm.rs
expression: result.unwrap()
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "test")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
}

vespera::schema_type!(Schema from Model, name = "TestSchema");
impl ActiveModelBehavior for ActiveModel {}
