crates/vespertide-exporter/src/snapshots/vespertide_exporter__orm__tests__render_entity_with_schema_snapshots@sqlmodel.snap
---
source: crates/vespertide-exporter/src/orm.rs
expression: result.unwrap()
---
from __future__ import annotations


from sqlmodel import Field, SQLModel


class Test(SQLModel, table=True):
    __tablename__ = "test"

    id: int = Field(primary_key=True)
